// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date picker component renders correctly 1`] = `
Array [
  <span
    class="sr-only"
    id="undefined-label"
  />,
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        aria-labelledby="undefined-label"
        class="form-control filter-input"
        type="text"
        value=""
      />
    </div>
  </div>,
  <button
    class="btn btn-default btn-calendar"
  >
    <span
      class="glyphicon glyphicon-calendar"
    />
  </button>,
]
`;

exports[`Date picker component renders correctly when is not adjustable 1`] = `
Array [
  <span
    class="sr-only"
    id="undefined-label"
  />,
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        aria-labelledby="undefined-label"
        class="form-control"
        type="text"
        value=""
      />
    </div>
  </div>,
  <button
    class="btn btn-default btn-calendar"
  >
    <span
      class="glyphicon glyphicon-calendar"
    />
  </button>,
]
`;

exports[`Date picker component renders correctly with different locale and date format 1`] = `
Array [
  <span
    class="sr-only"
    id="undefined-label"
  />,
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        aria-labelledby="undefined-label"
        class="form-control"
        type="text"
        value=""
      />
    </div>
  </div>,
  <button
    class="btn btn-default btn-calendar"
  >
    <span
      class="glyphicon glyphicon-calendar"
    />
  </button>,
]
`;
